# RustySSH

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md  feature_plan.md  issues_to_fix.md  source.md
src/: lib.rs  logging.rs  main.rs
src/app/: events.rs  mod.rs  state.rs
src/config/: hosts.rs  mod.rs  settings.rs
src/credentials/: master.rs  mod.rs  vault.rs
src/sftp/: browser.rs  mod.rs  sftp_session.rs  transfer.rs
src/ssh/: auth.rs  connection.rs  keys.rs  mod.rs  session.rs  tunnel.rs
src/tui/: highlight.rs  icons.rs  mod.rs  terminal_render.rs  theme.rs  ui.rs
src/tui/views/: connections.rs  help.rs  keys.rs  mod.rs  session.rs  session_list.rs  settings.rs  sftp.rs  tunnels.rs
src/tui/widgets/: find_overlay.rs  host_list.rs  mod.rs  password_overlay.rs  status_bar.rs  transfer_popup.rs
src/utils/: mod.rs  path.rs  terminal.rs
tests/: main.rs
tests/common/: fixtures.rs  mod.rs
tests/docker/: docker-compose.yml  start_servers.sh
tests/integration/: auth.rs  command.rs  connection.rs  session.rs
tests/podman/: compose.yaml  start_servers.sh
