[package]
name = "rustyssh"
version = "0.1.0"
edition = "2021"
authors = ["RustySSH Contributors"]
description = "A high-performance TUI SSH connection manager"
license = "MIT"
repository = "https://github.com/rustyssh/rustyssh"
keywords = ["ssh", "tui", "terminal", "sftp", "tunnel"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# SSH - use ssh2 which wraps libssh2 and has stable dependencies
ssh2 = "0.9"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Terminal emulation
vt100 = "0.15"

# Serialization/Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1"
whoami = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
